1998-06-21  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* call_diff_write_output, call_diff_printf_output,
	call_diff_flush_output, call_diff_write_stdout, call_diff_error,
	call_diff_stdout_callbacks, call_diff_file_callbacks): Re-indent.

1998-06-19  Ian Lance Taylor  <ian@cygnus.com>

	* update.c (merge_file): Make sure the time stamp of the file is
	different from the time stamp we register in the Entries file.
	(join_file): Likewise.

1998-06-18  Ian Lance Taylor  <ian@cygnus.com>

	* rcscmds.c: Include <stdio.h>.  Include either <stdarg.h> or
	<varargs.h>.  Declare vasprintf.
	(call_diff_write_output): New static function.
	(call_diff_printf_output): New static function.
	(call_diff_flush_output): New static function.
	(call_diff_write_stdout): New static function.
	(call_diff_error): New static function.
	(call_diff_stdout_callbacks): New static variable.
	(call_diff_file_callbacks): New static variable.
	(call_diff): Don't sleep.  Use a callback structure when calling
	the diff library.
	(call_diff3): Likewise.

	* rcscmds.c: Include diffrun.h.
	(call_diff, call_diff3): Pass NULL callback parameter.
	(diff_run, diff3_run): Don't declare.
	* Makefile.in (rcscmds.o): New target, to use -I for diff
	directory.
	(zlib.o): Depend upon zlib.h.

1998-06-09  Mike Sutton@SAIC

	Make it compile with Sun's bundled K&R C compiler:
	* rcs.c (count_delta_actions): Change to static to match
	declaration.
	* client.c (handle_wrapper_rcs_option): Rename error label to
	handle_error to avoid clash with function name.

1998-06-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_delete_revs): If we are trying to delete all
	revisions, give an error rather than assertion failed.
	* sanity.sh (basicb): New tests basicb-o* test for this.

1998-06-04  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add): Only send "Directory" requests if we need to.

1998-06-02  Assar Westerlund  <assar@sics.se>

	* client.c: Check for HAVE_GSS_C_NT_HOSTBASED_SERVICE rather than